# fair-ml-overbooking

./: .gitignore  Dockerfile  README.md  main.ipynb  output_pm_nb.ipynb  pyproject.toml  simulation_automation.ipynb  simulation_process.ipynb
.devcontainer/: devcontainer.json
prediction_model/: Final_model.pkl  column_names.pkl  ppv_npv_results.xlsx  y.npy
project_modules/: classes.py  project_imports.py  rules.py  simulation_tools.py
simulation_outputs/excel_files/: probandoNov25_2_replicas_2_iter_results.xlsx  ~$ATBEG4_randomSample_nov24night_5_replicas_30_iter_final_results.xlsx
